Thu Nov  1 16:30:45 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (): Support asterisk at beginning of a line as comment.

Sat Oct 27 20:37:47 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* src/area.c (c_area): Remove unnecessary calls to Input_Rest.

Sat Oct 27 20:34:51 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/reloc/Makefile.in: Fix typo and update the check target
	output.
	* unittests/compare/Makefile.in: Update the check target output.

Sat Oct 27 20:31:57 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* macros.c (Macro_Find): Make local.  Add addSfxWildcard parameter.
	(Macro_Call): Pass macro by name and namelength instead of macro
	pointer.  Support macro suffix.
	(AddMacroArg): Add.
	(c_macro): Support macro suffix.
	* macros.h: Remove global.h and whileif.h header include.
	(Macro): Add nameLen, suffixArg fields.  Update comments.
	(Macro_Find): Remove declaration.
	(Macro_Call): Update declaration.
	* decode.c: Add whileif.h include.
	(decode): Remove Macro_Find call, update Macro_Call call.

	* unittests/compare/core/macro_args.s: Enhance with a macro suffix
	test.

Wed Oct 24 00:39:47 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cpu.c (m_nop): Add Thumb support.
	* symbol.c (ParseSymbolAndAdjustFlag): Code style fix.
	* directive_data.c (c_align): Rework and add CODEALIGN support.

	unittests/compare:
	* core/align.s: Add CODEALIGN test case.
	* core/instr_nop_new_style.s: Move Thumb test case to...
	* include/nop.s: ...here and enhance it.

Wed Oct 24 00:34:31 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/reloc/Makefile.in: Fix comments and check target output.
	* unittests/compare/Makefile.in: Likewise.

Wed Oct 24 00:31:42 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* src/output.c (Output_AOF): Use AREA_INT_AOFMASK to filter out
	internal implementation bits.
	* unittests/reloc/ref/area_aof.txt: Update reference file.
